--- a/Sebastian_Nicholas_Assignment3/public/register.html
+++ b/Sebastian_Nicholas_Assignment3/public/register.html
@@ -140,9 +140,9 @@
             <input type="password" placeholder="Enter Password" class="form__input" name="password" id="password">
 
             <!-- Password Conformation -->
-            <label for="repeat_password"><b>Repeat Password</b></label>
+            <label for="repeat_password"><b>Re-enter Password</b></label>
             <div id='repeat_password_error' style="color: orangered;"></div>
-            <input type="password" placeholder="Repeat Password" class="form__input" name="repeat_password"
+            <input type="password" placeholder="Re-enter Password" class="form__input" name="repeat_password"
                 id="repeat_password">
 
         <button type="submit" class="registerbtn">Register</button>
@@ -157,7 +157,7 @@
 </body>
     <br>
     <!-- Button that allows the user to go back to the products page -->
-    <input type="button" class="button" value="Home" onclick="window.location.href = 'products_display.html';">
+    <input type="button" class="button" value="Back to Shop" onclick="window.location.href = 'products_display.html';">
     <br>
 </html>
    
