--- a/Sebastian_Nicholas_Assignment3/public/cart.html
+++ b/Sebastian_Nicholas_Assignment3/public/cart.html
@@ -14,7 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Cart</title>
-
+    <link href="invoice.css" rel="stylesheet" />
     <script src="./function&IDR7.js"></script>
     <script>
         var products_data;
@@ -159,7 +159,7 @@
     Every $50 added will result in an increase in shipping & checkouts of over $200 will result in a 10% shipping fee.
     <br> 
     Shipping is provided and handled by USPS Services 
-    
+    <br>
     <img src="./Images/usps.jpeg" alt="Shipping Policy" class="w3-image" style="display:block;margin:auto" width="800" height="533">
 
   </div>
