--- a/Sebastian_Nicholas_Assignment3/public/cart.html
+++ b/Sebastian_Nicholas_Assignment3/public/cart.html
@@ -20,14 +20,14 @@
         var products_data;
         var total = 0;
         loadJSON('get_products_data', function (response) {
-          // Parsing JSON string into object
-          products_data = JSON.parse(response);
+            // Parsing JSON string into object
+            products_data = JSON.parse(response);
         });
-    
+
         var cart;
         loadJSON('get_cart', function (response) {
-        // Parsing JSON string into object
-        cart = JSON.parse(response);
+            // Parsing JSON string into object
+            cart = JSON.parse(response);
         });
 
         var userinfo;
@@ -35,101 +35,100 @@
             // Parsing JSON string into object
             userinfo = JSON.parse(response);
         });
-      </script>
+    </script>
 
 </head>
 
 
 <body>
     <div class="cart_container">
-    <style>
-        aside {
-          display: flex;
-          align-items: stretch;
-          background: no-repeat 50% center;
-          padding: 50px 0;
-        }
-  
-        /* Bordered form */
-        body {
-          font-family: Arial, Helvetica, sans-serif;
-        }
-  
-        form {
-          border: 3px solid #f1f1f1;
-        }
-  
-        /* Full-width inputs */
-        input[type=text],
-        input[type=password] {
-          width: 100%;
-          padding: 12px 20px;
-          margin: 8px 0;
-          display: inline-block;
-          border: 1px solid #ccc;
-          box-sizing: border-box;
-        }
-  
-        /* Set a style for all buttons */
-        button {
-          background-color: rgb(67, 24, 221);
-          color: white;
-          padding: 14px 20px;
-          margin: 4px 0;
-          border: auto;
-          cursor: pointer;
-          width: 100%;
-        }
-  
-        /* Adds the hover effect for buttons */
-        button:hover {
-          opacity: 0.8;
-        }
-  
-        /* Extra style for the cancel button (red) */
-        .cancelbtn {
-          width: auto;
-          padding: 10px 18px;
-          background-color: tan;
-        }
-  
-        /* Center the avatar image inside this container */
-        .imgcontainer {
-          text-align: center;
-          margin: 24px 0 12px 0;
-        }
-  
-        /* Avatar image */
-        img.avatar {
-          width: 40%;
-          border-radius: 50%;
-        }
-  
-        /* Add padding to containers */
-        .cart_container {
-          padding: 16px;
-        }
-  
-        /* The "Forgot password" text */
-        span.psw {
-          float: right;
-          padding-top: 16px;
-        }
-  
-      </style>
-    <main>
-        <script>
-            subtotal = 0; //start subtotal with 0
-            //generate item rows for table
-            for(pkey in cart){
-            quantities = cart[pkey];
-            for (i = 0; i < products_data[pkey].length; i++) {
-                if (quantities[i] > 0) {
-                    //calculate extended price
-                    extended_price = quantities[i] * products_data[pkey][i].price;
-                    subtotal += extended_price;
-                    //generate the product rows for table
-                    document.write(`
+        <style>
+            aside {
+                display: flex;
+                align-items: stretch;
+                background: no-repeat 50% center;
+                padding: 50px 0;
+            }
+
+            /* Bordered form */
+            body {
+                font-family: Arial, Helvetica, sans-serif;
+            }
+
+            form {
+                border: 3px solid #f1f1f1;
+            }
+
+            /* Full-width inputs */
+            input[type=text],
+            input[type=password] {
+                width: 100%;
+                padding: 12px 20px;
+                margin: 8px 0;
+                display: inline-block;
+                border: 1px solid #ccc;
+                box-sizing: border-box;
+            }
+
+            /* Set a style for all buttons */
+            button {
+                background-color: rgb(67, 24, 221);
+                color: white;
+                padding: 14px 20px;
+                margin: 4px 0;
+                border: auto;
+                cursor: pointer;
+                width: 100%;
+            }
+
+            /* Adds the hover effect for buttons */
+            button:hover {
+                opacity: 0.8;
+            }
+
+            /* Extra style for the cancel button (red) */
+            .cancelbtn {
+                width: auto;
+                padding: 10px 18px;
+                background-color: tan;
+            }
+
+            /* Center the avatar image inside this container */
+            .imgcontainer {
+                text-align: center;
+                margin: 24px 0 12px 0;
+            }
+
+            /* Avatar image */
+            img.avatar {
+                width: 40%;
+                border-radius: 50%;
+            }
+
+            /* Add padding to containers */
+            .cart_container {
+                padding: 16px;
+            }
+
+            /* The "Forgot password" text */
+            span.psw {
+                float: right;
+                padding-top: 16px;
+            }
+        </style>
+        <main>
+            <script>
+                subtotal = 0; //start subtotal with 0
+                //generate item rows for table
+                for (pkey in cart) {
+                    quantities = cart[pkey];
+                    for (i = 0; i < products_data[pkey].length; i++) {
+                        if (quantities[i] > 0) {
+                            //calculate extended price
+                            extended_price = quantities[i] * products_data[pkey][i].price;
+                            subtotal += extended_price;
+                            //generate the product rows for table
+                            document.write(`
                     <section class="order_info"${[i]}>
                     <h1>Item</h1>
                     <b><span id="name">${products_data[pkey][i].name}</span></b>
@@ -139,36 +138,41 @@
                     <span id="price">\$${products_data[pkey][i].price}</span>
                     </section>
                     `);
+                        }
+                    }
                 }
-            }
-          }
-        </script>
-        </div>
-        <section class="added_up">
-            <h2>Sub-total</h2>
-                <span>$<script>document.write(subtotal.toFixed(2));</script></span>
-        </section>
-</main>
+            </script>
+    </div>
+    <section class="added_up">
+        <h2>Sub-total</h2>
+        <span>$
+            <script>document.write(subtotal.toFixed(2));</script>
+        </span>
+    </section>
+    </main>
 
- <div class="w3-container w3-padding-32 w3-center">  
-    <h3>Shipping Policy</h3>
-    <b>SHIPPING POLICY IS: </b>
-    <br> 
-    Checkouts of $50 or less will only have a $10 shipping fee.
+    <div class="w3-container w3-padding-32 w3-center">
+        <h3>Shipping Policy</h3>
+        <b>SHIPPING POLICY IS: </b>
+        <br>
+        Checkouts of $50 or less will only have a $10 shipping fee.
+        <br>
+        Every $50 added will result in an increase in shipping & checkouts of over $200 will result in a 10% shipping
+        fee.
+        <br>
+        Shipping is provided and handled by USPS Services
+        <br>
+        <img src="./Images/usps.jpeg" alt="Shipping Policy" class="w3-image" style="display:block;margin:auto"
+            width="800" height="533">
+
+    </div>
+
     <br>
-    Every $50 added will result in an increase in shipping & checkouts of over $200 will result in a 10% shipping fee.
-    <br> 
-    Shipping is provided and handled by USPS Services 
+    <!-- Button that allows the user to go back to the products page -->
+    <input type="button" class="button" value="Back to Shop" onclick="window.location.href = 'products_display.html';">
     <br>
-    <img src="./Images/usps.jpeg" alt="Shipping Policy" class="w3-image" style="display:block;margin:auto" width="800" height="533">
-
-  </div>
-
-<br>
-<!-- Button that allows the user to go back to the products page -->
-<input type="button" class="button" value="Back to Shop" onclick="window.location.href = 'products_display.html';">
-<br>
-<!-- Button that allows the user to continue to the invoice page -->
-<input type="button" class="button" value="Checkout" onclick="window.location.href = 'invoice.html';">
+    <!-- Button that allows the user to continue to the invoice page -->
+    <input type="button" class="button" value="Checkout" onclick="window.location.href = 'invoice.html';">
 </body>
+
 </html>
