--- a/Sebastian_Nicholas_Assignment3/public/products_display.html
+++ b/Sebastian_Nicholas_Assignment3/public/products_display.html
@@ -160,15 +160,22 @@
 
           <label>Add to</label>
           <input type="submit" name="purchase_order" value="Cart" Purchase>
+
+          <script>
+            console.log(total_in_carts);
+          </script>
       </div>
       </main>
       <div>
+      
 
 
-
-        <!------------------------------------------------------------------------------>
-        <!-- End page content -->
+      <script>
+        console.log(total_in_carts);
+      </script>
       </div>
+      <!------------------------------------------------------------------------------>
+      <!-- End page content -->
       <!------------------------------------------------------------------------------>
 
 
