--- a/Sebastian_Nicholas_Assignment3/public/invoice.html
+++ b/Sebastian_Nicholas_Assignment3/public/invoice.html
@@ -130,7 +130,7 @@
         document.write(`${email}`)
     </script>
 
-    <form action="./done" method="post">
+    <form action="./checkout" method="post">
         <input type="submit" name="done_button" id="done_button" value="Done">
     </form>
     <br>
