--- a/Sebastian_Nicholas_Assignment3/public/cart.html
+++ b/Sebastian_Nicholas_Assignment3/public/cart.html
@@ -162,7 +162,7 @@
         <br>
         Shipping is provided and handled by USPS Services
         <br>
-        <img src="./Images/usps.jpeg" alt="Shipping Policy" class="w3-image" style="display:block;margin:auto"
+        <img src="./images/usps.jpeg" alt="Shipping Policy" class="w3-image" style="display:block;margin:auto"
             width="800" height="533">
 
     </div>
