--- a/Sebastian_Nicholas_Assignment3/public/index.html
+++ b/Sebastian_Nicholas_Assignment3/public/index.html
@@ -46,7 +46,7 @@
     <a href="./products_display.html">
 
         <!-- Image of Store with text -->
-        <img src="./Images/shoestore.jpg">
+        <img src="./images/shoestore.jpg">
 
         <!-- Have to close <a> or the picture wont lead to the next page-->
     </a>
