--- a/Sebastian_Nicholas_Assignment3/public/login.html
+++ b/Sebastian_Nicholas_Assignment3/public/login.html
@@ -138,7 +138,7 @@
 </body>
 <br>
 <!-- Button that allows the user to go back to the products page -->
-<input type="button" class="button" value="Home" onclick="window.location.href = 'Products_display.html';">
+<input type="button" class="button" value="Home" onclick="window.location.href = 'products_display.html';">
 <br>
 
 </html>
