--- a/Sebastian_Nicholas_Assignment3/public/products_display.html
+++ b/Sebastian_Nicholas_Assignment3/public/products_display.html
@@ -116,7 +116,7 @@
 
 
       <!-- Put Logo Under Title or Replace Title with Adidas Logo-->
-      <img src="./Images/logo.png" alt="Logo" class="w3-image" style="display:block;margin:auto" width="800"
+      <img src="./images/logo.png" alt="Logo" class="w3-image" style="display:block;margin:auto" width="800"
         height="533">
 
       <!-- Logout button -->
